Minor fix to relative import error, config based index_config.json for loading connection details, and note indexing.

--- a/src/config/press_release_config.json
+++ b/src/config/press_release_config.json
@@ -17,6 +17,7 @@
       {"name": "places", "type": "string[]", "facet":true},
       {"name": "orgs", "type": "string[]", "facet":true},
       {"name": "tags", "type": "string[]", "facet":true},
+      {"name": "keyphrases", "type": "string[]", "facet": true},
       {"name": "dates", "type": "string[]", "facet":true}
     ]
   }
